# markov

./: .gitignore  .pdm-python  README.md  pipeline.py  pyproject.toml
src/markov/: __main__.py
