[project]
name = "markov"
version = "0.1.0"
description = "Fun tool to make Markov chains out of your own Discord history."
authors = [
    {name = "AcipenserSturio", email = "AcipenserSturio@users.noreply.github.com"},
]
dependencies = [
    "nltk>=3.8.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "GPL-3.0"}

[tool.pdm.scripts]
start = "python -m markov"
